06-04-2026 UPDATES